# pokelance

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test.py
discmon/: __init__.py  cache.py  client.py  errors.py  http.py  pokemon.py  sprites.py
docs/: cache.rst  client.rst  conf.py  index.md  index.rst  intro.md  pokemon.rst  requirements.txt  starting.md
docs/API/: api.rst  error_reference.rst
docs/source/: conf.py  index.rst
examples/: discord_py_example.py  general_example.py  hikari_example.py
pokeapi/: __init__.py  cache.py  client.py  errors.py  generations.py  pokemon.py  sprites.py
pokelance/: __init__.py  cache.py  client.py  errors.py  generations.py  http.py  pokemon.py  sprites.py
