[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["sarthak-py"]
description = "An Pokeapi API wrapper made for discord bots/async code."
name = "pokelance"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
hikari = {version = "^2.0.0-alpha.105", python = "~3.8"}
hikari-lightbulb = {version = "^2.1.3", python = "~3.8"}
lightbulb-ext-filament = {version = "^0.1.2", python = "~3.8"}