[tool.poetry]
name = "pokelance"
version = "0.1.0"
description = "An asynchronous API wrapper for https://pokeapi.co/"
authors = ["sarthak-py <shiva02939@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
hikari-lightbulb = "^2.2.0"
lightbulb-ext-filament = "^0.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
